commit mostrar mensaje y css varios

--- a/Project_d/app/templates/assets/css/mantencionesu.css
+++ b/Project_d/app/templates/assets/css/mantencionesu.css
@@ -22,7 +22,7 @@
 
 /* Estilo de los encabezados de la tabla */
 #tablaMantenciones th {
-    background-color: #4CAF50; /* Color de fondo */
+    background-color: #2B2E4A; /* Color de fondo */
     color: white; /* Color del texto */
     font-family: 'Arial', sans-serif; /* Tipo de fuente */
     padding: 10px; /* Espaciado interno */
