--- a/Project_d/app/templates/mantencionesUsuario.html
+++ b/Project_d/app/templates/mantencionesUsuario.html
@@ -101,6 +101,7 @@
 
 
 <script src="/assets/js/usuario.js"></script>
+<script src="/assets/js/sesion.js"></script>
 </body>
 <footer>
   <!-- Contenido del footer -->
