--- a/Project_d/app/templates/Home.html
+++ b/Project_d/app/templates/Home.html
@@ -57,7 +57,9 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Mi cuenta
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="customDropdownMenu">
+                            <a class="dropdown-item" href="PublicarVehiculos.html">Publica tu auto</a>
+                            <a class="dropdown-item" href="mantencion.html">Mantención</a>
                             <a class="dropdown-item" href="mantencionesUsuario.html">Mis mantenciones</a>
                             <a class="dropdown-item" href="#">Mis publicaciones</a>
                             <div class="dropdown-divider"></div>
