Revert "mis publicaciones"
This reverts commit 275048b01780ae12f6a76374befa10555bf894cf.

--- a/Project_d/app/templates/PublicarVehiculos.html
+++ b/Project_d/app/templates/PublicarVehiculos.html
@@ -58,7 +58,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="mantencionesUsuario.html">Mis mantenciones</a>
-                            <a class="dropdown-item" href="Mis_publicaciones.html">Mis publicaciones</a>
+                            <a class="dropdown-item" href="#">Mis publicaciones</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#" id="logoutButton">Cerrar sesión</a>
                         </div>
