--- a/Project_d/app/templates/autos.html
+++ b/Project_d/app/templates/autos.html
@@ -57,7 +57,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="mantencionesUsuario.html">Mis mantenciones</a>
-                            <a class="dropdown-item" href="Mis_publicaciones.html">Mis publicaciones</a>
+                            <a class="dropdown-item" href="#">Mis publicaciones</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#" id="logoutButton">Cerrar sesión</a>
                         </div>
@@ -117,7 +117,7 @@
     <script src="/assets/js/usuario.js"></script>
     <!-- Template Javascript -->
     <script src="/assets/js/sesion.js"></script>
-    <script src="assets/js/filtroBusqueda.js"></script> 
+    <script src="/assets/js/filtroBusqueda.js"></script> 
 </body>
 <footer class="container-fluid bg-secondary text-light py-4">
   <div class="container text-center">
