--- a/Project_d/app/templates/mantencion.html
+++ b/Project_d/app/templates/mantencion.html
@@ -118,6 +118,7 @@
 
 
    <script src="/assets/js/usuario.js"></script>
+   <script src="/assets/js/mensaje.js"></script>
    <!-- Template Javascript -->
    <script src="/assets/js/sesion.js"></script>
 </body>
