Revert "Revert "mis publicaciones""
This reverts commit 2cc21192da0d89696aa4d5a94a735d236441cace.

--- a/Project_d/app/templates/Mis_publicaciones.html
+++ b/Project_d/app/templates/Mis_publicaciones.html
@@ -34,40 +34,38 @@
     <!-- Navbar Start -->
 <!-- Navbar Start -->
 <div class="container-fluid position-relative nav-bar p-0">
-  <div class="position-relative" style="z-index: 9;">
-      <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
-          <a href="" class="navbar-brand">
-              <h1 class="text-uppercase text-primary mb-1">AutoMarket</h1>
-          </a>
-          <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
-              <div class="navbar-nav ml-auto py-0">
-                  <a href="Home.html" class="nav-item nav-link active">Inicio</a>
-                  <a href="#nuestros-servicios" class="nav-item nav-link">Servicio</a>
-                  <a href="autos.html" class="nav-item nav-link">Autos</a>
-                  <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
-                  <!-- Elementos para usuario no logueado -->
-                  <a href="Login-register.html" class="nav-item nav-link" id="loginRegisterLink">Inicia Sesión/Registrate</a>
-                  <!-- Elementos para usuario logueado -->
-                  <div class="nav-item dropdown" id="userAccountMenu" style="display: none;">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Mi cuenta
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="customDropdownMenu">
-                          <a class="dropdown-item" href="PublicarVehiculos.html">Publica tu auto</a>
-                          <a class="dropdown-item" href="mantencion.html">Mantención</a>
-                          <a class="dropdown-item" href="mantencionesUsuario.html">Mis mantenciones</a>
-                          <a class="dropdown-item" href="#">Mis publicaciones</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#" id="logoutButton">Cerrar sesión</a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </nav>
-  </div>
+    <div class="position-relative" style="z-index: 9;">
+        <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
+            <a href="" class="navbar-brand">
+                <h1 class="text-uppercase text-primary mb-1">AutoMarket</h1>
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
+                <div class="navbar-nav ml-auto py-0">
+                    <a href="Home.html" class="nav-item nav-link active">Inicio</a>
+                    <a href="#nuestros-servicios" class="nav-item nav-link">Servicio</a>
+                    <a href="autos.html" class="nav-item nav-link">Autos</a>
+                    <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
+                    <!-- Elementos para usuario no logueado -->
+                    <a href="Login-register.html" class="nav-item nav-link" id="loginRegisterLink">Inicia Sesión/Registrate</a>
+                    <!-- Elementos para usuario logueado -->
+                    <div class="nav-item dropdown" id="userAccountMenu" style="display: none;">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Mi cuenta
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="mantencionesUsuario.html">Mis mantenciones</a>
+                            <a class="dropdown-item" href="Mis_publicaciones.html">Mis publicaciones</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#" id="logoutButton">Cerrar sesión</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
 </div>
 <!-- Navbar End -->
 <!-- Rent A Car Start -->
@@ -119,7 +117,7 @@
     <script src="/assets/js/usuario.js"></script>
     <!-- Template Javascript -->
     <script src="/assets/js/sesion.js"></script>
-    <script src="assets/js/filtroBusqueda.js"></script> 
+    <script src="assets/js/Mispublicaciones.js"></script> 
 </body>
 <footer class="container-fluid bg-secondary text-light py-4">
   <div class="container text-center">
