--- a/Project_d/app/templates/Home.html
+++ b/Project_d/app/templates/Home.html
@@ -26,7 +26,6 @@
     <!-- Template Stylesheet -->
     <link href="/assets/css/style.css" rel="stylesheet">
 
-    <h2 id="welcomeMessage">Bienvenido, <span id="usernameDisplay"></span></h2>
 </head>
 
 <body>
@@ -49,7 +48,7 @@
                     <a href="Home.html" class="nav-item nav-link active">Inicio</a>
                     <a href="#nuestros-servicios" class="nav-item nav-link">Servicio</a>
                     <a href="autos.html" class="nav-item nav-link">Autos</a>
-                    <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
+                    <a href="nosotros.html" class="nav-item nav-link">Sobre nosotros</a>
                     <!-- Elementos para usuario no logueado -->
                     <a href="Login-register.html" class="nav-item nav-link" id="loginRegisterLink">Inicia Sesión/Registrate</a>
                     <!-- Elementos para usuario logueado -->
@@ -392,6 +391,7 @@
 
 
     <!-- JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="assets/lib/easing/easing.min.js"></script>
