--- a/Project_d/app/templates/Login-register.html
+++ b/Project_d/app/templates/Login-register.html
@@ -30,15 +30,15 @@
                 <!--Login-->
                 <form action="" class="formulario__login">
                     <h2>Iniciar Sesión</h2>
-                    <input type="text" placeholder="Correo Electronico" id="correo">
+                    <input type="text" placeholder="Correo electrónico" id="correo">
                     <input type="password" placeholder="Contraseña" id="contrasena">
                     <button type="submit" id="submit_login">Entrar</button>
                 </form>
                 <!--Registro-->
                 <form action="" class="formulario__register">
-                    <h2>Regístrarse</h2>
+                    <h2>Registrarse</h2>
                     <input type="text" placeholder="Nombre de usuario" id="nombre_usuario">
-                    <input type="email" placeholder="Correo Electronico" id="correo_login">
+                    <input type="email" placeholder="Correo electrónico" id="correo_login">
                     <input type="password" placeholder="Contraseña" id=contrasena_login>
                     <button type="submit" id="submit_register">Registrarse</button>
                 </form>
@@ -47,5 +47,6 @@
     </main>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/login-register.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
