--- a/Project_d/app/templates/Home.html
+++ b/Project_d/app/templates/Home.html
@@ -60,7 +60,7 @@
                             <a class="dropdown-item" href="PublicarVehiculos.html">Publica tu auto</a>
                             <a class="dropdown-item" href="mantencion.html">Mantención</a>
                             <a class="dropdown-item" href="mantencionesUsuario.html">Mis mantenciones</a>
-                            <a class="dropdown-item" href="#">Mis publicaciones</a>
+                            <a class="dropdown-item" href="Mis_publicaciones.html">Mis publicaciones</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#" id="logoutButton">Cerrar sesión</a>
                         </div>
