--- a/Project_d/app/templates/autos.html
+++ b/Project_d/app/templates/autos.html
@@ -24,7 +24,7 @@
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
