commit menus x roles

--- a/Project_d/app/templates/Home.html
+++ b/Project_d/app/templates/Home.html
@@ -62,7 +62,32 @@
                             <a class="dropdown-item" href="mantencionesUsuario.html">Mis mantenciones</a>
                             <a class="dropdown-item" href="Mis_publicaciones.html">Mis publicaciones</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" id="logoutButton">Cerrar sesión</a>
+                            <a class="dropdown-item logout-button" href="#" id="logoutButton">Cerrar sesión</a>
+                        </div>
+                    </div>
+                    <!-- Elementos para mecánico -->
+                    <div class="nav-item dropdown" id="mechanicMenu" style="display: none;">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Menú Mecánico
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="mantenciones.html">Mantenciones</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item logout-button" href="#" id="logoutButtonMechanic">Cerrar sesión</a>
+                        </div>
+                    </div>
+
+                    <!-- Elementos para administrador -->
+                    <div class="nav-item dropdown" id="adminMenu" style="display: none;">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Menú Administrador
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="publicacionespendientes.html">Publicaciones pendientes</a>
+                            <a class="dropdown-item" href="rolUser.html">Cambiar Rol</a>
+                            <a class="dropdown-item" href="mantenciones.html">Mantenciones</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item logout-button" href="#" id="logoutButtonAdmin">Cerrar sesión</a>
                         </div>
                     </div>
                 </div>
