Mis publicaciones con botón de borrar

--- a/Project_d/app/templates/detalle-vehiculo-mispublicaciones.html
+++ b/Project_d/app/templates/detalle-vehiculo-mispublicaciones.html
@@ -89,6 +89,9 @@
             <p><strong>Precio:</strong> <span id="precio-vehiculo"></span></p>
             <h1>Descripción</h1>
             <p><span id="descripcion-vehiculo"></span></p>
+            <p> <button onclick="eliminarVehiculo()" class="btn btn-danger">Eliminar Publicación</button>
+
+            </p>
         </div>
     </div>
 </div>
