--- a/Project_d/app/templates/Mis_publicaciones.html
+++ b/Project_d/app/templates/Mis_publicaciones.html
@@ -73,26 +73,9 @@
 <!-- Rent A Car Start -->
 <div class="container-fluid py-5">
   <div class="container pt-5 pb-3">
-    <h1 class="display-4 text-uppercase text-center mb-5">Publicaciones</h1>
+    <h1 class="display-4 text-uppercase text-center mb-5">Mis Publicaciones</h1>
     
-    <form id="filtroVehiculos">
-      <select name="marca">
-        <option value="">Selecciona Marca</option>
-        <!-- Las opciones de marcas se cargarán dinámicamente -->
-      </select>
-      
-      <select name="modelo">
-        <option value="">Selecciona Modelo</option>
-        <!-- Las opciones de modelos se cargarán dinámicamente -->
-      </select>
-      
-      <select name="ano">
-        <option value="">Selecciona Año</option>
-        <!-- Las opciones de años se cargarán dinámicamente -->
-      </select>
-      
-      <button type="submit">Buscar</button>
-    </form>
+    
     
     <div id="resultadosVehiculos">
       <!-- Los resultados de la búsqueda se mostrarán aquí -->
