--- a/Project_d/app/templates/detalle-vehiculo.html
+++ b/Project_d/app/templates/detalle-vehiculo.html
@@ -118,7 +118,7 @@
    <script src="assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
    <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-
+   <script src="/assets/js/numberFormatter.js"></script> 
    <script src="/assets/js/usuario.js"></script>
    <!-- Template Javascript -->
    <script src="/assets/js/sesion.js"></script>
