--- a/Project_d/app/templates/Home.html
+++ b/Project_d/app/templates/Home.html
@@ -84,7 +84,7 @@
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="publicacionespendientes.html">Publicaciones pendientes</a>
-                            <a class="dropdown-item" href="rolUser.html">Cambiar Rol</a>
+                            <a class="dropdown-item" href="cuentas.html">Cambiar Rol</a>
                             <a class="dropdown-item" href="mantenciones.html">Mantenciones</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item logout-button" href="#" id="logoutButtonAdmin">Cerrar sesión</a>
