--- a/Project_d/app/templates/assets/css/pendientes.css
+++ b/Project_d/app/templates/assets/css/pendientes.css
@@ -41,3 +41,12 @@ body {
     font-size: 16px;
     color: #666;
 }
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333; /* Cambia esto al color de fondo que desees */
+    color: white; /* Cambia esto al color de texto que desees */
+    padding: 20px; /* Añade espaciado interior si lo necesitas */
+  }
