--- a/Project_d/app/templates/nosotros.html
+++ b/Project_d/app/templates/nosotros.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
-    
+
 <head>
-        <meta charset="utf-8">
-        <title>AutoMarket</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    
-        <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
-    
-        <!-- Google Web Fonts -->
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik&display=swap" rel="stylesheet"> 
-    
-        <!-- Font Awesome -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
-    
-        <!-- Libraries Stylesheet -->
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-    
-        <!-- Customized Bootstrap Stylesheet -->
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-    
-        <!-- Template Stylesheet -->
-        <link href="/assets/css/style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>AutoMarket</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-        <link href="/assets/css/nosotros.css" rel="stylesheet">
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
 
-    </head>
-    
-    
-    <body>
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik&display=swap" rel="stylesheet"> 
+
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/nosotros.css" rel="stylesheet">
+
+
+</head>
+
+<body>
+
+
+
+    <!-- Navbar Start -->
 <!-- Navbar Start -->
 <div class="container-fluid position-relative nav-bar p-0">
     <div class="position-relative" style="z-index: 9;">
         <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
-            <a href="" class="navbar-brand">
+            <a href="Home.html" class="navbar-brand">
                 <h1 class="text-uppercase text-primary mb-1">AutoMarket</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -44,10 +47,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
-                    <a href="Home.html" class="nav-item nav-link">Inicio</a>
-                    <a href="Home.html#nuestros-servicios" class="nav-item nav-link">Servicio</a>
+                    <a href="Home.html" class="nav-item nav-link active">Inicio</a>
+                    <a href="#nuestros-servicios" class="nav-item nav-link">Servicio</a>
                     <a href="autos.html" class="nav-item nav-link">Autos</a>
-                    <a href="nosotros.html" class="nav-item nav-link active">Sobre nosotros</a>
+                    <a href="nosotros.html" class="nav-item nav-link">Sobre nosotros</a>
                     <!-- Elementos para usuario no logueado -->
                     <a href="Login-register.html" class="nav-item nav-link" id="loginRegisterLink">Inicia Sesión/Registrate</a>
                     <!-- Elementos para usuario logueado -->
@@ -61,14 +64,40 @@
                             <a class="dropdown-item" href="mantencionesUsuario.html">Mis mantenciones</a>
                             <a class="dropdown-item" href="Mis_publicaciones.html">Mis publicaciones</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" id="logoutButton">Cerrar sesión</a>
+                            <a class="dropdown-item logout-button" href="#" id="logoutButton">Cerrar sesión</a>
+                        </div>
+                    </div>
+                    <!-- Elementos para mecánico -->
+                    <div class="nav-item dropdown" id="mechanicMenu" style="display: none;">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Menú Mecánico
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="mantenciones.html">Mantenciones</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item logout-button" href="#" id="logoutButtonMechanic">Cerrar sesión</a>
+                        </div>
+                    </div>
+
+                    <!-- Elementos para administrador -->
+                    <div class="nav-item dropdown" id="adminMenu" style="display: none;">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Menú Administrador
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="publicacionespendientes.html">Publicaciones pendientes</a>
+                            <a class="dropdown-item" href="rolUser.html">Cambiar Rol</a>
+                            <a class="dropdown-item" href="mantenciones.html">Mantenciones</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item logout-button" href="#" id="logoutButtonAdmin">Cerrar sesión</a>
                         </div>
                     </div>
                 </div>
             </div>
         </nav>
     </div>
-</div>
+</div>>
+
 <!-- Navbar End -->
     <section id="sobre-nosotros">
         <div class="container" id="texto">
@@ -93,11 +122,16 @@
             <p class="mb-2"><i class="fa fa-phone-alt mr-2"></i>+56957722451</p>
             <p><i class="fa fa-envelope mr-2"></i>contacto@automarket.com</p>
             <div>
-                <p class="mb-2"><span class="copyright-symbol">©</span> AutoMarket. Todos los derechos reservados.</p>
+                <p class="mb-2">© AutoMarket. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
     <!-- Footer End -->
+
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
 
     <!-- JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -115,6 +149,8 @@
     <script src="assets/js/usuario.js"></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
+
