--- a/Project_d/app/templates/detalle-vehiculo-mispublicaciones.html
+++ b/Project_d/app/templates/detalle-vehiculo-mispublicaciones.html
@@ -87,6 +87,7 @@
             <p><strong>Kilometraje:</strong> <span id="kilometraje-vehiculo"></span></p>
             <p><strong>Combustible:</strong> <span id="gasolina-vehiculo"></span></p>
             <p><strong>Precio:</strong> <span id="precio-vehiculo"></span></p>
+            <p><strong>Número:</strong> <span id="numero"></span></p>
             <h1>Descripción</h1>
             <p><span id="descripcion-vehiculo"></span></p>
             <p> <button onclick="eliminarVehiculo()" class="btn btn-danger">Eliminar Publicación</button>
