--- a/Project_d/app/templates/detalle-vehiculo.html
+++ b/Project_d/app/templates/detalle-vehiculo.html
@@ -117,6 +117,7 @@
             <p><strong>Kilometraje:</strong> <span id="kilometraje-vehiculo"></span></p>
             <p><strong>Combustible:</strong> <span id="gasolina-vehiculo"></span></p>
             <p><strong>Precio:</strong> <span id="precio-vehiculo"></span></p>
+            <p><strong>Número:</strong> <span id="numero"></span></p>
             <h1>Descripción</h1>
             <p><span id="descripcion-vehiculo"></span></p>
         </div>
@@ -148,7 +149,7 @@
    <script src="assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
    <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-   <script src="/assets/js/numberFormatter.js"></script> 
+   <script src="/assets/js/numberFormatter.js"></script>
    <script src="/assets/js/usuario.js"></script>
    <!-- Template Javascript -->
    <script src="/assets/js/sesion.js"></script>
