--- a/Project_d/app/templates/nosotros.html
+++ b/Project_d/app/templates/nosotros.html
@@ -47,10 +47,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
-                    <a href="Home.html" class="nav-item nav-link active">Inicio</a>
+                    <a href="Home.html" class="nav-item nav-link">Inicio</a>
                     <a href="#nuestros-servicios" class="nav-item nav-link">Servicio</a>
                     <a href="autos.html" class="nav-item nav-link">Autos</a>
-                    <a href="nosotros.html" class="nav-item nav-link">Sobre nosotros</a>
+                    <a href="nosotros.html" class="nav-item nav-link active">Sobre nosotros</a>
                     <!-- Elementos para usuario no logueado -->
                     <a href="Login-register.html" class="nav-item nav-link" id="loginRegisterLink">Inicia Sesión/Registrate</a>
                     <!-- Elementos para usuario logueado -->
